# unify-include-guard

./: CMakeLists.txt  README.md
backup/test/: test1.hpp
backup/test/impl/: test2.hpp
include/: file_traits.hpp  guard_name_creator.hpp  utility.hpp
src/: file_traits.cpp  guard_name_creator.cpp  main.cpp  remove_pragma_once.cpp  replace_ifndef_guard.cpp
test/: test0.hpp
